cdebconf (0.117) UNRELEASED; urgency=low

  [ Attilio Fiandrotti ]
  * gtk.c: remove some compatibility conditions that are no longer needed.
    Closes: #427657.
  
  [ Otavio Salvador ]
  * Reduce the usage of casting to struct frontend_data on GTK frontend
    code. Closes: #426745.

 -- Otavio Salvador <otavio@debian.org>  Wed, 13 Jun 2007 14:04:55 -0300

cdebconf (0.116) unstable; urgency=low

  [ Frans Pop ]
  * Increase TITLE_PADDING to 9 to allow for all extra characters around the
    title (newt frontend). Closes: #416543.

  [ Colin Watson ]
  * Restore newt help line to its original colours after displaying errors;
    compare #317354.

  [ Updated translations ]
  * Basque (eu.po) by Piarres Beobide
  * Romanian (ro.po) by Eddy Petrișor

 -- Frans Pop <fjp@debian.org>  Mon, 21 May 2007 16:34:28 +0200

cdebconf (0.115) unstable; urgency=low

  [ Colin Watson ]
  * Add myself to debian/copyright as I have a fair bit of code in here.
  * Update copyright notice to 2007.

  [ Joey Hess ]
  * Multiply menu-item-numbers by 100

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:31:15 -0400

cdebconf (0.114) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Fix display of text in info box for gtk frontend. Closes: #408435.

  [ Updated translations ]
  * Malayalam (ml.po) by Praveen A
  * Swedish (sv.po) by Daniel Nylander

 -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 16:39:56 +0100

cdebconf (0.113) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * For SELECT and MULTISELECT questions, only update the debconf database if
    the user presses <Ok>. Closes: #407205.
  * Workaround for crash when performing drag'n'drop of text (experienced with
    gtk/dfb 2.8.20). Closes: #407035.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Latvian (lv.po) by Aigars Mahinovs
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)