@@ -3,12 +3,13 @@ cdebconf (0.117) UNRELEASED; urgency=low
   [ Attilio Fiandrotti ]
   * gtk.c: remove some compatibility conditions that are no longer needed.
     Closes: #427657.
-  
+  * Removed workaround for #404482, fixed upstream in gtk+ release 2.10.13.
+
   [ Otavio Salvador ]
   * Reduce the usage of casting to struct frontend_data on GTK frontend
     code. Closes: #426745.
 
- -- Otavio Salvador <otavio@debian.org>  Wed, 13 Jun 2007 14:04:55 -0300
+ -- Attilio Fiandrotti <attilio.fiandrotti@gmail.com>  Mon, 18 Jun 2007 15:35:11 +0200
 
 cdebconf (0.116) unstable; urgency=low
 
